--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -1,7 +1,19 @@
 .container{
   background-color:white;
-  margin-top: 60px;
+  padding-top: 60px;
   width:100%;
-  height:500px;
-  border: 1px solid #e5e5e5;
+  /* border: 1px solid #e5e5e5; */
+}
+
+.center{
+  position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 600px;
+    height: 300px;
+    background-color: #e5e5e5;
+    text-align: center;
 }
