--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,3 +1,8 @@
-<div id="div_content" class="container">
-    <h1 style="color:red;">Content of the page</h1>
-</div>
+<!-- <div id="div_content" class="container">
+    <div class="center">
+     <h1 style="color:red;">Content of the page</h1>
+  </div>
+</div> -->
+<p>
+  content works
+</p>
