Observer usecase example

--- a/src/app/spinner/spinner.component.html
+++ b/src/app/spinner/spinner.component.html
@@ -1,3 +1,4 @@
-<p>
-  spinner works!
-</p>
+<div [hidden]="!isVisible">
+  <!-- <img src="./assets/img/spinner.gif"> -->
+  <p>Loading ...</p>
+</div>
