--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div >
     <!-- <app-header></app-header> -->
+    <app-spinner></app-spinner>
     <router-outlet></router-outlet>
     <!-- <app-footer></app-footer> -->
 </div>
